--- a/experience.html
+++ b/experience.html
@@ -73,6 +73,9 @@
 									<!--<a href="#" class="image featured">-->
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
+									<div>
+										<img src="images/pyiu_logo.png" width="352" height="555" align="left" style="margin: 10px 20px 10px 20px;" alt="PyIU official logo." />
+									</div>
 									<p>In fall of 2022, I organized the first-ever Python Crash Course session for astronomy undergraduates
 									at Indiana University (IU). This single event blossomed into the recurring PyIU Python workshop series,
 									which serves to spark interest in STEM and provide students with
@@ -89,6 +92,9 @@
 									which is why we have transitioned to making all materials available in a public
 									GitHub repository, which is accessible here:
 									<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>. </p>
+									<div>
+										<img src="images/F24_PythonCC_lecture.jpg" width="403" height="302" align="right" style="margin: 10px 20px 10px 20px;" alt="Lecturing during the fall 2024 Crash Course." />
+									</div>
 									<p>Media:
 									<ul>
 										<li>Fall 2024 Crash Course: 
