--- a/experience.html
+++ b/experience.html
@@ -38,12 +38,18 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">Volunteer and Outreach</div>
+					<div class="title">Service and Outreach</div>
 					<div class="container">
-
+						<ul>
+							<li>Member of the Mission & Vision Committee for the Emerging Researchers in Exoplanet Science (ERES) Symposium</li>
+							<li>Indiana University (IU) Graduate Leadership<ul>
+								<li>Tea Talk Coordinator</li>
+								<li>Undergraduate Research Coordinator</li>
+							</ul> </li>
+									</ul>
 						<!-- Content -->
 							<div id="content">
-								<article class="box post">
+								<!--<article class="box post">
 									<header class="style1">
 										<h2>This page under construction...</h2>
 										<p>Come back soon!</p>
@@ -52,7 +58,7 @@
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
 									<p>See <a href="cv.html">CV</a> for relevant outreach experience.</p>
-								</article>
+								</article>-->
 							</div>
 
 					</div>
@@ -74,7 +80,7 @@
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
 									<div>
-										<img src="images/pyiu_logo.png" width="352" height="555" align="left" style="margin: 10px 20px 10px 20px;" alt="PyIU official logo." />
+										<img src="images/pyiu_logo.png" width="117" height="185" align="left" style="margin: 10px 20px 10px 20px;" alt="PyIU official logo." />
 									</div>
 									<p>In fall of 2022, I organized the first-ever Python Crash Course session for astronomy undergraduates
 									at Indiana University (IU). This single event blossomed into the recurring PyIU Python workshop series,
