--- a/experience.html
+++ b/experience.html
@@ -41,11 +41,16 @@
 					<div class="title">Service and Outreach</div>
 					<div class="container">
 						<ul>
-							<li>Member of the Mission & Vision Committee for the Emerging Researchers in Exoplanet Science (ERES) Symposium</li>
-							<li>Indiana University (IU) Graduate Leadership<ul>
+							<li><strong>Member of the Mission & Vision Committee for the Emerging Researchers in Exoplanet Science (ERES) Symposium</strong></li>
+							<li><strong>Indiana University (IU) Astronomy Graduate Leadership</strong><ul>
 								<li>Tea Talk Coordinator</li>
 								<li>Undergraduate Research Coordinator</li>
 							</ul> </li>
+							<li><strong>Astronomy on Tap</strong>
+							<ul>
+								<li>Exoplanets in the Media: Fact or Fantasy?</li>
+								<li>Astronomy News: NASA's DART Impact Reshaped the Asteroid Dimorphos</li>
+							</ul></li>
 									</ul>
 						<!-- Content -->
 							<div id="content">
