--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,10 @@
 					<div class="title">Service and Outreach</div>
 					<div class="container">
 						<ul>
-							<li><strong>Member of the Mission & Vision Committee for the Emerging Researchers in Exoplanet Science (ERES) Symposium</strong></li>
+							<li><strong>Mission & Vision Committee for the ERES Symposium</strong><ul>
+								<li> Member of the ERES M & V committee.</li>
+							</ul></li>
+							
 							<li><strong>Indiana University (IU) Astronomy Graduate Leadership</strong><ul>
 								<li>Tea Talk Coordinator</li>
 								<li>Undergraduate Research Coordinator</li>
