--- a/experience.html
+++ b/experience.html
@@ -40,6 +40,11 @@
 				<div id="main" class="wrapper style2">
 					<div class="title">Service and Outreach</div>
 					<div class="container">
+						<header class="style1">
+							<h2>Service</h2>
+						</header>
+						<p>Service is integral to astronomy, and I am very interested in taking on new opportunities
+						in science organization and leadership.</p>
 						<ul>
 							<li><strong>Mission & Vision Committee for the ERES Symposium</strong><ul>
 								<li> Member of the ERES M & V committee.</li>
