--- a/experience.html
+++ b/experience.html
@@ -43,23 +43,30 @@
 						<header class="style1">
 							<h2>Service</h2>
 						</header>
-						<p>Service is integral to astronomy, and I am very interested in taking on new opportunities
-						in science organization and leadership.</p>
-						<ul>
-							<li><strong>Mission & Vision Committee for the ERES Symposium</strong><ul>
-								<li> Member of the ERES M & V committee.</li>
-							</ul></li>
-							
-							<li><strong>Indiana University (IU) Astronomy Graduate Leadership</strong><ul>
-								<li>Tea Talk Coordinator</li>
-								<li>Undergraduate Research Coordinator</li>
-							</ul> </li>
-							<li><strong>Astronomy on Tap</strong>
-							<ul>
-								<li>Exoplanets in the Media: Fact or Fantasy?</li>
-								<li>Astronomy News: NASA's DART Impact Reshaped the Asteroid Dimorphos</li>
-							</ul></li>
-									</ul>
+						<p>Service is integral to astronomy. I am very interested in taking on opportunities
+						to serve on committees and in other science organization and leadership roles. Throughout
+						my tenure in graduate school, I took on various leadership roles including Coordinator for
+						Research Group Meetings and Exoplanet Journal Clubs, as well as elected positions
+						within the Graduate Student Government such as Undergraduate Research Coordinator and
+						Tea Talk Coordinator. I also served on the Science Organizing Committee (SOC) and
+						Local Organizing Committee (LOC) for the 2022 Great Lakes Exoplanet Area Meeting (GLEAM)
+						hosted at Indiana University (IU), and on the Mission & Vision Committee for the Emerging
+						Researchers in Exoplanet Science (ERES) where I worked in a small team to develop
+						mission and vision statements for the annual ERES conference.</p>
+						<header class="style1">
+							<h2>Outreach</h2>
+						</header>
+						<p>Public outreach is crucial to realize the broader impacts of research. I
+						have long been invested in scientific outreach, and have participated in countless events
+						targeting all ages and backgrounds in the local communities I've been a part of 
+						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).
+						More recently, I've been particularly excited about <em>Astronomy on Tap</em>,
+						giving two talks to help launch a new Chapter in Bloomington, Indiana:
+						one on NASA's DART mission and the other on the realism of exoplanets as 
+						they are portrayed in the media. In 2022, I also created a Python workshop series (dubbed "PyIU") that recently
+						expanded to accomodate IU students from all disciplines, and I am currently working
+						with local organizations to bring programming and astronomy education to the greater sourthern 
+						Indiana community and youth.</p>
 						<!-- Content -->
 							<div id="content">
 								<!--<article class="box post">
@@ -70,7 +77,6 @@
 									<!--<a href="#" class="image featured">-->
 									<!--	<img src="images/pic01.jpg" alt="" /> -->
 									<!--</a>-->
-									<p>See <a href="cv.html">CV</a> for relevant outreach experience.</p>
 								</article>-->
 							</div>
 
