--- a/experience.html
+++ b/experience.html
@@ -43,19 +43,25 @@
 						<header class="style1">
 							<h2>Service</h2>
 						</header>
-						<p>Service is integral to astronomy. I am very interested in taking on opportunities
-						to serve on committees and in other science organization and leadership roles. Throughout
-						my tenure in graduate school, I took on various leadership roles including Coordinator for
+						<p>Service is integral to astronomy. Throughout
+						my tenure in graduate school, I've had the opportunity to take on various scientific
+						organization and leadership roles including Coordinator for
 						Research Group Meetings and Exoplanet Journal Clubs, as well as elected positions
 						within the Graduate Student Government such as Undergraduate Research Coordinator and
 						Tea Talk Coordinator. I also served on the Science Organizing Committee (SOC) and
 						Local Organizing Committee (LOC) for the 2022 Great Lakes Exoplanet Area Meeting (GLEAM)
 						hosted at Indiana University (IU), and on the Mission & Vision Committee for the Emerging
-						Researchers in Exoplanet Science (ERES) where I worked in a small team to develop
-						mission and vision statements for the annual ERES conference.</p>
+						Researchers in Exoplanet Science (ERES) where I worked in a small, multi-institutional team to develop
+						mission and vision statements for the annual ERES conference. We are publishing a whitepaper outlining
+						our process for crafting these statements in the Bulletin of AAS (spring 2025), including findings
+						from surveys we conducted and focus groups we held.</p>
 						<header class="style1">
 							<h2>Outreach</h2>
 						</header>
+						<div>
+							<img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
+								alt="Giving an Astro on Tap talk on exoplanets." />
+						</div>
 						<p>Public outreach is crucial to realize the broader impacts of research. I
 						have long been invested in scientific outreach, and have participated in countless events
 						targeting all ages and backgrounds in the local communities I've been a part of 
@@ -66,19 +72,12 @@
 						they are portrayed in the media. In 2022, I also created a Python workshop series (dubbed "PyIU") that recently
 						expanded to accomodate IU students from all disciplines, and I am currently working
 						with local organizations to bring programming and astronomy education to the greater sourthern 
-						Indiana community and youth.</p>
-						<!-- Content -->
-							<div id="content">
-								<!--<article class="box post">
-									<header class="style1">
-										<h2>This page under construction...</h2>
-										<p>Come back soon!</p>
-									</header>
-									<!--<a href="#" class="image featured">-->
-									<!--	<img src="images/pic01.jpg" alt="" /> -->
-									<!--</a>-->
-								</article>-->
-							</div>
+						Indiana community and youth (see below for more details).</p>
+						<div>
+							<img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px;"
+								alt="Volunteering at IU for the 2024 total solar eclipse." />
+						</div>
+						
 
 					</div>
 				</div>
@@ -116,7 +115,7 @@
 									<p>Since 2022, many original resources and code demos have been produced through PyIU,
 									which is why we have transitioned to making all materials available in a public
 									GitHub repository, which is accessible here:
-									<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>. </p>
+									<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>.</p>
 									<div>
 										<img src="images/F24_PythonCC_lecture.jpg" width="403" height="302" align="right" style="margin: 10px 20px 10px 20px;" alt="Lecturing during the fall 2024 Crash Course." />
 									</div>
