--- a/experience.html
+++ b/experience.html
@@ -59,7 +59,7 @@
 							<h2>Outreach</h2>
 						</header>
 						<div>
-							<img src="images/astro_on_tap_F24.jpg" width="180" height="240" align="right" style="margin: 10px 20px 10px 20px;"
+							<img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
 								alt="Giving an Astro on Tap talk on exoplanets." />
 						</div>
 						<p>Public outreach is crucial to realize the broader impacts of research. I
@@ -73,13 +73,11 @@
 						expanded to accomodate IU students from all disciplines, and I am currently working
 						with local organizations to bring programming and astronomy education to the greater sourthern 
 						Indiana community and youth (see below for more details).</p>
-						<div>
-							<img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px;"
-								alt="Volunteering at IU for the 2024 total solar eclipse." />
-						</div>
-						
-						<p> </p>
-						
+						<figure>
+						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px;"
+														alt="Volunteering at IU for the 2024 total solar eclipse." />
+						    <figcaption>Solar eclipse viewing on IU's campus during the 2024 total eclipse (4 minutes of totality!)</figcaption>
+						</figure>						
 
 					</div>
 				</div>
