--- a/experience.html
+++ b/experience.html
@@ -59,25 +59,30 @@
 							<h2>Outreach</h2>
 						</header>
 						<div>
-							<img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
-								alt="Giving an Astro on Tap talk on exoplanets." />
+							
 						</div>
+						<figure>
+						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
+								alt="Giving an Astro on Tap talk on exoplanets." />
+						    <figcaption>Giving some background during my Astro on Tap talk on <em>Exoplanets in the Media</em>.</figcaption>
+						</figure>
 						<p>Public outreach is crucial to realize the broader impacts of research. I
 						have long been invested in scientific outreach, and have participated in countless events
 						targeting all ages and backgrounds in the local communities I've been a part of 
-						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).
-						More recently, I've been particularly excited about <em>Astronomy on Tap</em>,
+						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).</p>
+						<figure>
+						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
+														alt="Volunteering at IU for the 2024 total solar eclipse." />
+						    <figcaption>Solar eclipse viewing on IU's campus during the 2024 total eclipse (4+ minutes of totality!)</figcaption>
+						</figure>
+						<p>More recently, I've been particularly excited about <em>Astronomy on Tap</em>,
 						giving two talks to help launch a new Chapter in Bloomington, Indiana:
 						one on NASA's DART mission and the other on the realism of exoplanets as 
 						they are portrayed in the media. In 2022, I also created a Python workshop series (dubbed "PyIU") that recently
 						expanded to accomodate IU students from all disciplines, and I am currently working
 						with local organizations to bring programming and astronomy education to the greater sourthern 
 						Indiana community and youth (see below for more details).</p>
-						<figure>
-						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px;"
-														alt="Volunteering at IU for the 2024 total solar eclipse." />
-						    <figcaption>Solar eclipse viewing on IU's campus during the 2024 total eclipse (4 minutes of totality!)</figcaption>
-						</figure>						
+												
 
 					</div>
 				</div>
