--- a/experience.html
+++ b/experience.html
@@ -49,18 +49,16 @@
 						Research Group Meetings and Exoplanet Journal Clubs, as well as elected positions
 						within the Graduate Student Government such as Undergraduate Research Coordinator and
 						Tea Talk Coordinator. I also served on the Science Organizing Committee (SOC) and
-						Local Organizing Committee (LOC) for the 2022 Great Lakes Exoplanet Area Meeting (GLEAM)
+						Local Organizing Committee (LOC) for the 2022 Great Lakes Exoplanet Area Meeting
+						(<a href="https://astro.indiana.edu/news-events/events/gleam-2023/index.html">GLEAM</a>)
 						hosted at Indiana University (IU), and on the Mission & Vision Committee for the Emerging
-						Researchers in Exoplanet Science (ERES) where I worked in a small, multi-institutional team to develop
+						Researchers in Exoplanet Science (<a href="https://eres-planets.github.io/">ERES</a>) where I worked in a small, multi-institutional team to develop
 						mission and vision statements for the annual ERES conference. We are publishing a whitepaper outlining
 						our process for crafting these statements in the Bulletin of AAS (spring 2025), including findings
 						from surveys we conducted and focus groups we held.</p>
 						<header class="style1">
 							<h2>Outreach</h2>
 						</header>
-						<div>
-							
-						</div>
 						<figure>
 						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
 								alt="Giving an Astro on Tap talk on exoplanets." />
@@ -132,6 +130,12 @@
 									</ul>
 								</p>
 									<p>See <a href="cv.html">CV</a> for relevant professional development experience.</p>
+								<header class="style1">
+									<h2>NASA Planetary Science Summer School 
+									(<a href=https://www.jpl.nasa.gov/edu/internships/apply/nasa-science-mission-design-schools/>PSSS</a>)</h2>
+									<p>Summer 2023</p>
+								</header>
+									<p>Testing.</p>
 								</article>
 							</div>
 
