--- a/experience.html
+++ b/experience.html
@@ -59,15 +59,16 @@
 						<header class="style1">
 							<h2>Outreach</h2>
 						</header>
+						
+						<p>Public outreach is crucial to realize the broader impacts of research. I
+						have long been invested in scientific outreach, and have participated in countless events
+						targeting all ages and backgrounds in the local communities I've been a part of 
+						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).</p>
 						<figure>
 						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
 								alt="Giving an Astro on Tap talk on exoplanets." />
 						    <figcaption>Giving some background during my Astro on Tap talk on <em>Exoplanets in the Media</em>.</figcaption>
 						</figure>
-						<p>Public outreach is crucial to realize the broader impacts of research. I
-						have long been invested in scientific outreach, and have participated in countless events
-						targeting all ages and backgrounds in the local communities I've been a part of 
-						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).</p>
 						<figure>
 						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
 														alt="Volunteering at IU for the 2024 total solar eclipse." />
@@ -114,14 +115,14 @@
 									powerful Python tools, tricks, packages, and practical applications in research (past topics include
 									Data Analysis with numpy & pandas, Data Fitting, Statistics, Advanced Plotting, and much more). Both
 									sessions are entirely led by IU Astronomy graduate students and postdocs.</p>
-
+									<div>
+										<img src="images/F24_PythonCC_lecture.jpg" width="403" height="302" align="right" style="margin: 10px 20px 10px 20px;" alt="Lecturing during the fall 2024 Crash Course." />
+									</div>
 									<p>Since 2022, many original resources and code demos have been produced through PyIU,
 									which is why we have transitioned to making all materials available in a public
 									GitHub repository, which is accessible here:
 									<a href=https://github.com/BrandonRadzom/pyiu>github.com/BrandonRadzom/pyiu</a>.</p>
-									<div>
-										<img src="images/F24_PythonCC_lecture.jpg" width="403" height="302" align="right" style="margin: 10px 20px 10px 20px;" alt="Lecturing during the fall 2024 Crash Course." />
-									</div>
+									
 									<p>Media:
 									<ul>
 										<li>Fall 2024 Crash Course: 
@@ -135,7 +136,15 @@
 									(<a href=https://www.jpl.nasa.gov/edu/internships/apply/nasa-science-mission-design-schools/>PSSS</a>)</h2>
 									<p>Summer 2023</p>
 								</header>
-									<p>Testing.</p>
+									<p>Was selected to join a cohort of 18 graduate students and post-docs across various
+									disciplines to engage in an 11-week planetary mission design program. For the first
+									10 weeks, I remotely received training on mission formulation from NASA mentors and
+									worked with my cohort as Deputy PI and Science Objective Lead to design a New
+									Frontiers-class orbiter to Titan (in response to the NF5 AO). I assumed the role of
+									Science Subsystem Chair during the culminating week and worked with NASA's Team-X 
+									in person at JPL to finalize the mission design before presenting it to a review
+									panel of NASA engineers, scientists, and executives as a mock Portfolio Gate Review.
+									The concept study has been accepted to the Planetary Science Journal.</p>
 								</article>
 							</div>
 
