--- a/experience.html
+++ b/experience.html
@@ -65,7 +65,7 @@
 						targeting all ages and backgrounds in the local communities I've been a part of 
 						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).</p>
 						<figure>
-						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px;"
+						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" style="margin: 10px 20px 10px 20px; float: right"
 								alt="Giving an Astro on Tap talk on exoplanets." />
 						    <figcaption>Giving some background during my Astro on Tap talk on <em>Exoplanets in the Media</em>.</figcaption>
 						</figure>
