--- a/experience.html
+++ b/experience.html
@@ -64,16 +64,11 @@
 						have long been invested in scientific outreach, and have participated in countless events
 						targeting all ages and backgrounds in the local communities I've been a part of 
 						throughout my academic career (see my <a href="cv.html">CV</a> for an exhaustive list).</p>
-						<figure>
-						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" style="margin: 10px 20px 10px 20px; float: right"
+						<div>
+						   <img src="images/astro_on_tap_F24.jpg" width="300" height="400" align="right" style="margin: 10px 20px 10px 20px; float: right"
 								alt="Giving an Astro on Tap talk on exoplanets." />
-						    <figcaption>Giving some background during my Astro on Tap talk on <em>Exoplanets in the Media</em>.</figcaption>
-						</figure>
-						<figure>
-						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
-														alt="Volunteering at IU for the 2024 total solar eclipse." />
-						    <figcaption>Solar eclipse viewing on IU's campus during the 2024 total eclipse (4+ minutes of totality!)</figcaption>
-						</figure>
+						</div>
+						
 						<p>More recently, I've been particularly excited about <em>Astronomy on Tap</em>,
 						giving two talks to help launch a new Chapter in Bloomington, Indiana:
 						one on NASA's DART mission and the other on the realism of exoplanets as 
@@ -81,6 +76,11 @@
 						expanded to accomodate IU students from all disciplines, and I am currently working
 						with local organizations to bring programming and astronomy education to the greater sourthern 
 						Indiana community and youth (see below for more details).</p>
+						<figure>
+						   <img src="images/eclipse_btown_S24.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px;"
+														alt="Volunteering at IU for the 2024 total solar eclipse." />
+						    <figcaption>Solar eclipse viewing on IU's campus during the 2024 total eclipse (4+ minutes of totality!)</figcaption>
+						</figure>
 												
 
 					</div>
@@ -130,13 +130,13 @@
 									<li>Spring 2023 Advanced Workshop: <a href=https://astro.indiana.edu/news-events/news/pythn-crash-course-2023.html>https://astro.indiana.edu/news-events/news/pythn-crash-course-2023.html</a></li>
 									</ul>
 								</p>
-									<p>See <a href="cv.html">CV</a> for relevant professional development experience.</p>
+									<br>
 								<header class="style1">
 									<h2>NASA Planetary Science Summer School 
 									(<a href=https://www.jpl.nasa.gov/edu/internships/apply/nasa-science-mission-design-schools/>PSSS</a>)</h2>
 									<p>Summer 2023</p>
 								</header>
-									<p>Was selected to join a cohort of 18 graduate students and post-docs across various
+									<p>In spring of 2023, I was selected to join a cohort of 18 graduate students and post-docs across various
 									disciplines to engage in an 11-week planetary mission design program. For the first
 									10 weeks, I remotely received training on mission formulation from NASA mentors and
 									worked with my cohort as Deputy PI and Science Objective Lead to design a New
