--- a/experience.html
+++ b/experience.html
@@ -145,6 +145,13 @@
 									in person at JPL to finalize the mission design before presenting it to a review
 									panel of NASA engineers, scientists, and executives as a mock Portfolio Gate Review.
 									The concept study has been accepted to the Planetary Science Journal.</p>
+									<p>Media:
+									<ul>
+										<li>IU College of Arts + Sciences News Article: 
+											<a href=https://news.iu.edu/college/live/news/35938-graduate-students-summer-experience-at-nasas-jet>https://news.iu.edu/college/live/news/35938-graduate-students-summer-experience-at-nasas-jet</a></li>
+									<li>IU Astronomy News Article:<a href=https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html>https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html</a></li>
+									</ul>
+								</p>
 								</article>
 							</div>
 
