--- a/experience.html
+++ b/experience.html
@@ -145,6 +145,8 @@
 									in person at JPL to finalize the mission design before presenting it to a review
 									panel of NASA engineers, scientists, and executives as a mock Portfolio Gate Review.
 									The concept study has been accepted to the Planetary Science Journal.</p>
+									
+									<p>This experience affirmed and grew my interest in mission concept design.</p>
 									<p>Media:
 									<ul>
 										<li>IU College of Arts + Sciences News Article: 
