--- a/experience.html
+++ b/experience.html
@@ -136,16 +136,23 @@
 									(<a href=https://www.jpl.nasa.gov/edu/internships/apply/nasa-science-mission-design-schools/>PSSS</a>)</h2>
 									<p>Summer 2023</p>
 								</header>
-									<p>In spring of 2023, I was selected to join a cohort of 18 graduate students and post-docs across various
-									disciplines to engage in an 11-week planetary mission design program. For the first
-									10 weeks, I remotely received training on mission formulation from NASA mentors and
-									worked with my cohort as Deputy PI and Science Objective Lead to design a New
-									Frontiers-class orbiter to Titan (in response to the NF5 AO). I assumed the role of
+									<p>I have a strong interest in mission science and support, and was fortunate enough
+									to be selected for NASA's 2023 PSSS cohort. During this 11-week mission design training
+									program, I joined a group of 18 graduate students and post-docs across various
+									disciplines to develop a New-Frontiers (NF) class mission in response to the NF5
+									Announcement of Opportunity (AO). After familiarizing ourselves with the AO and the 2023
+									Planetary Science Decadal Survey, our team selected the enigmatic moon of Saturn, Titan, 
+									as the target for our orbiter. We received 10 weeks of remote training
+									on mission formulation from NASA mentors while working on our concept.
+									. I assumed the role of Deputy PI, Science Objective Lead, and
 									Science Subsystem Chair during the culminating week and worked with NASA's Team-X 
 									in person at JPL to finalize the mission design before presenting it to a review
 									panel of NASA engineers, scientists, and executives as a mock Portfolio Gate Review.
 									The concept study has been accepted to the Planetary Science Journal.</p>
-									
+									<div>
+									   <img src="images/cohort_pic_control_room.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+											alt="My PSSS cohort picuted just outside of JPL mission control." />
+									</div>
 									<p>This experience affirmed and grew my interest in mission concept design.</p>
 									<p>Media:
 									<ul>
@@ -154,6 +161,10 @@
 									<li>IU Astronomy News Article:<a href=https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html>https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html</a></li>
 									</ul>
 								</p>
+								<div>
+								   <img src="images/brandon_thunder_subsystem_role.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+										alt="Picture of me holding my subsytem role plack in front of a whiteboard sketch of our mission concept, THUNDER, at JPL." />
+								</div>
 								</article>
 							</div>
 
