--- a/experience.html
+++ b/experience.html
@@ -136,21 +136,30 @@
 									(<a href=https://www.jpl.nasa.gov/edu/internships/apply/nasa-science-mission-design-schools/>PSSS</a>)</h2>
 									<p>Summer 2023</p>
 								</header>
-									<p>I have a strong interest in mission science and support, and was fortunate enough
+									<p>I have a strong interest in mission science and support, and was fortunate
 									to be selected for NASA's 2023 PSSS cohort. During this 11-week mission design training
 									program, I joined a group of 18 graduate students and post-docs across various
 									disciplines to develop a New-Frontiers (NF) class mission in response to the NF5
 									Announcement of Opportunity (AO). After familiarizing ourselves with the AO and the 2023
 									Planetary Science Decadal Survey, our team selected the enigmatic moon of Saturn, Titan, 
 									as the target for our orbiter. We received 10 weeks of remote training
-									on mission formulation from NASA mentors while working on our concept.
-									. I assumed the role of Deputy PI, Science Objective Lead, and
-									Science Subsystem Chair during the culminating week and worked with NASA's Team-X 
-									in person at JPL to finalize the mission design before presenting it to a review
-									panel of NASA engineers, scientists, and executives as a mock Portfolio Gate Review.
-									The concept study has been accepted to the Planetary Science Journal.</p>
+									on mission formulation from NASA mentors and were simultaneously tasked with
+									developing our concept, which included consultations with NASA's Team-X along the
+									way. I became engrossed in the science case for our mission, which was titled Titan's Hydrocarbons:
+									Uncovering New Dimensions of Evolutionary pRocesses (THUNDER), and I assumed the role of
+									Science Objective Lead for one of its three science objectives.</p>
+										
+									<p>During the culminating week  of the program, I also took on the role of Deputy PI and
+									Science Subsystem Chair and worked alongside my cohort with NASA's Team-X 
+									in person at JPL to complete a Point Design Study for THUNDER and finalize the concept (for Phase A review). 
+									At the end of the week, our team underwernt a mock Portfolio Gate Review and presented
+									THUNDER's design to a panel of NASA engineers, scientists, and executives.
+									After completion of PSSS, my cohort and I wrote up our design in a manuscript
+									that was recently accepted for publication in the Planetary Science Journal, hoping 
+									that some of its concepts may be useful for future mission designs and may fuel 
+									much-deserved scientific interest in Titan.</p>
 									<div>
-									   <img src="images/cohort_pic_control_room.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+									   <img src="images/cohort_pic_control_room.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px; float: right"
 											alt="My PSSS cohort picuted just outside of JPL mission control." />
 									</div>
 									<p>This experience affirmed and grew my interest in mission concept design.</p>
@@ -158,11 +167,12 @@
 									<ul>
 										<li>IU College of Arts + Sciences News Article: 
 											<a href=https://news.iu.edu/college/live/news/35938-graduate-students-summer-experience-at-nasas-jet>https://news.iu.edu/college/live/news/35938-graduate-students-summer-experience-at-nasas-jet</a></li>
-									<li>IU Astronomy News Article:<a href=https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html>https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html</a></li>
+									<li>IU Astronomy News Article: <a href=https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html>https://astro.indiana.edu/news-events/news/radzom-brandon-nasa-2023.html</a></li>
 									</ul>
 								</p>
+									<br>
 								<div>
-								   <img src="images/brandon_thunder_subsystem_role.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+								   <img src="images/brandon_thunder_subsystem_role.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px; float: right"
 										alt="Picture of me holding my subsytem role plack in front of a whiteboard sketch of our mission concept, THUNDER, at JPL." />
 								</div>
 								</article>
