--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 									<!--</ul>-->
 								<!--</li>-->
 								<li><a href="research.html">Research</a></li>
-								<li><a href="publications.html">Publications</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="experience.html">Experience</a></li>
 								<li><a href="cv.html">CV</a></li>
 							</ul>
