--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="research.html">Research</a></li>
-								<li><a href="publications.html">Publications</a></li>
+								<li><a href="about.html">About</a></li>
 								<li class="current"><a href="experience.html">Experience</a></li>
 								<li><a href="cv.html">CV</a></li>
 							</ul>
