--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li class="current"><a href="research.html">Research</a></li>
-								<li><a href="publications.html">Publications</a></li>
+								<li><a href="about.html">About</a></li>
 								<li><a href="experience.html">Experience</a></li>
 								<li><a href="cv.html">CV</a></li>
 								
@@ -222,7 +222,7 @@
 										to build a coherent science case for THUNDER and ensure closure. PSSS culminated with a Point Design
 										Study with Team-X at JPL and subsequently a mock Porfolio Gate Review presentation to a review panel of
 										NASA scientists, engineers, and executives. Our manuscript detailing the mission concept
-										(Seltzer, Lien, Radzom et al.) is currently under review for publication in the Planetary Science Journal.
+										(Seltzer, Lien, Radzom et al. 2025) is published to the Planetary Science Journal.
 									</p>
 							</div>
 
