--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     						<a href="cv.html" class="button style3 large;">CV</a>
 					</p>
 					<!--<ul class="actions">
-						<a href="cv.html" class="button style3 large">CV</a>
+						<a href="cv.html" class="button style3 large">My CV</a>
 					</ul>-->
 					<div class="container">
 						<aside>
-						  <img src="images/brandon_gleam2022_cropped_5_4.jpg" width="260" height="208" align="right" class="block"
-								style="margin: 0px 20px 20px 40px;" alt="Brandon's GLEAM 2022 talk." />
+						  <img src="images/griffith_solar_hollywood_darker.jpg" width="192" height="256" align="right" class="block"
+								style="margin: 0px 20px 20px 40px;" alt="Brandon at Griffith Observatory after some solar viewing." />
 						  <!--<p>Giving a fun presentation at the 2022 Great Lakes Area Meeting on quiescent origins
 								for hot Jupiters!</p>-->
 						</aside>
@@ -288,8 +288,9 @@
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p>
-														<a href="https://www.linkedin.com/in/brandon-radzom-33795b148">LinkedIn</a><br />
-														<a href="https://www.twitter.com/LilSarcadzom?t=4_sVg-waeeGNeWRpSyVKIg&s=09">Twitter</a><br />
+														LinkedIn: <a href="https://www.linkedin.com/in/brandon-radzom-33795b148">Brandon Radzom</a><br />
+														Twitter: <a href="https://www.twitter.com/LilSarcadzom?t=4_sVg-waeeGNeWRpSyVKIg&s=09">@lilsarcadzom</a><br />
+														Bluesky: <a href="https://bsky.app/profile/did:plc:jvskvp75ompytvts4n2s6ulh">@brandonradzom.bsky.social</a><br />
 													</p>
 												</section>
 											</div>
@@ -297,7 +298,8 @@
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
-														<a href="bradzom@iu.edu">bradzom@iu.edu</a>
+														Institutional: <a href="bradzom@iu.edu">bradzom@iu.edu</a>
+														Personal: <a href="brandonradzom@gmail.com">brandonradzom@gmail.com</a>
 													</p>
 												</section>
 											</div>
