--- a/research.html
+++ b/research.html
@@ -201,6 +201,11 @@
 								</article> -->
 								<article class="box post">
 									<header class="style1">
+										<h2>Mission science</h2>
+										<p>2021-Present</p>
+									</header>
+									
+									<header class="style1">
 										<h3>THUNDER: A Titan orbiter mission concept for NASA's New Frontiers program</h3>
 									</header>
 									<div>
@@ -224,6 +229,20 @@
 										NASA scientists, engineers, and executives. Our manuscript detailing the mission concept
 										(Seltzer, Lien, Radzom et al. 2025) is published to the Planetary Science Journal.
 									</p>
+									<header class="style1">
+										<h3>NASA's Habitable Worlds Observatory: Science Overlaps</h3>
+									</header>
+									<div>
+									    <img src="images/habitable-worlds-observatory-hero-illustration.jpg" width="240" height="135" align="right" style="margin: 0px 0px 0px 20px;" alt="" />
+									</div>
+									<p>I am also part of the Space-based Astro Working Group for NASA's upcoming Habitable Worlds Observatory (HWO) flagship mission.
+									HWO will use ultra-advanced starlight suppression technology to directly image Earth-like planets around Sun-like stars
+										, enabling it to search for evidence of biosignatures through visible reflected light and address the profound age-old question:
+										"Are we alone in the universe?". I am working with other working group members to publish a whitepaper summarizing the array of relevant science overlaps
+									addressed by past, ongoing, and planned missions internationally. We hope to build a dynamic and searchable database tying Decadal Survey
+									priorities to these missions to streamline future mission concept planning.</p>
+										
+										<p>
 							</div>
 
 					</div>
