--- a/research.html
+++ b/research.html
@@ -94,13 +94,13 @@
 									to determine a system's projected spin-orbit angle. With additional information on the stellar inclination, 
 									the true 3D stellar obliquity can be derived as well.</p>
 									<header class="style1">
-										<h4>TOI-5143 (Radzom et al. 2024b, in prep.)</h4>
+										<h4>TOI-5143</h4>
 									</header>
 									<div>
-									    <img src="images/dt5143.jpg" width="1065" height="347" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
+									    <img src="images/ajad9dd5f1_hr.jpg" width="1030" height="343" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
 									</div>
 									<br>
-									<p>TOI-5143 is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
+									<p>TOI-5143 c is a hot Jupiter in a compact multi-planet system recently discovered by NASA's Transiting Exoplanet Survey Satellite (TESS)
 										mission and confirmed by Quinn et al., in prep., and is only the <em>third</em> of such systems to have its stellar obliquity
 										measured. In my recent analysis of this system, we employ Bayesian Inference and the Doppler Shadow
 									technique to measure its stellar obliquity via the RM effect, finding it is well-aligned. Our result continues the trend of alignemnt 
@@ -111,7 +111,7 @@
 									demonstrates that some hot Jupiters <em>must</em> have quiescent origins, having avoided achieving the large eccentricities
 									that would have otherwise destroyed their companions and/or excited their obliquities during their path to their close-in orbits.</p>
 									<header class="style1">
-										<h4>TOI-5126 and TOI-5398 (Radzom et al. 2024 AJ 168 116)</h4>
+										<h4>TOI-5126 and TOI-5398</h4>
 									</header>
 									<div>
 									    <img src="images/subSat_RMs.jpg" width="771" height="361" align="left" style="margin: 20px 20px 20px 20px;" alt="Our NEID RM measurements of TOI-5126 and TOI-5398." />
@@ -146,20 +146,22 @@
 									</div>
 									
 									<p>To this end, I am leading a project to test the viability of quiescent formation pathways to produce hot Jupiters,
-										such as disk migration and in situ formation, using N-body simulations. In this work, we study and describe
+										such as disk migration and in situ formation, from a purely dynamical perspective
+										using N-body simulations. In this work, we study and describe
 										the dynamical evolution of compact multi-planet systems containing a close-in gas giants at a range of
 										orbital periods.
 										We find that quiescent formation pathways for such giants
 										naturally reproduces several known observational properties, including
-										the higher nearby companion rate for warm Jupiters compared to hot Jupiters.
+										the higher nearby companion rate for warm Jupiters compared to hot Jupiters,
+										as well as a preference for interior small-planet companions.
 										This is illustrated qualiatively in the figure on the right, 
 										which shows the period ratios of our simulated Jupiters with their nearest low-mass
-										companion after 10 Myr of dynamical evolution, where we see that hot giants are
-										much more isolated than warm giants. Based on resultant orbital architectures, we
-										posit that a large fraction of these companions
-										to hot Jupiters are too distant and/or exhibit too high of mutual inclinations to be 
-										detected efficiently, causing hot Jupiters to appear more lonely than they truly are.
-										Our paper (Radzom et al.) has been submitted to ApJ.</p>
+										companion after nearly a billion orbits, where we see that hot giants are
+										much more isolated than warm giants, demonstrating that this outcome is not unique to 
+										high-eccentricity migration. Based on orbital architectures of our final systems,
+										which feature mutually inclined planets for hot Jupiters, we
+										posit that hot Jupiters may appear more lonely than they truly are in this origin scenario.
+										Our paper (Radzom et al.) is under review for publication in ApJ.</p>
 								</article>
 								<br>
 								<br>
@@ -233,7 +235,7 @@
 										<h3>NASA's Habitable Worlds Observatory: Science Overlaps</h3>
 									</header>
 									<div>
-									    <img src="images/habitable-worlds-observatory-hero-illustration.jpg" width="240" height="135" align="right" style="margin: 0px 0px 0px 20px;" alt="" />
+									    <img src="images/habitable-worlds-observatory-hero-illustration.jpg" width="288" height="162" align="right" style="margin: 0px 0px 0px 20px;" alt="" />
 									</div>
 									<p>I am also part of the Space-based Astro Working Group for NASA's upcoming Habitable Worlds Observatory (HWO) flagship mission.
 									HWO will use ultra-advanced starlight suppression technology to directly image Earth-like planets around Sun-like stars
