--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="research.html">Research</a></li>
-								<li><a href="publications.html">Publications</a></li>
+								<li><a href="about.html">Abouts</a></li>
 								<li><a href="experience.html">Experience</a></li>
 								<li class="current"><a href="cv.html">CV</a></li>
 							</ul>
@@ -44,9 +44,12 @@
 
 			<!-- Main -->
 				<div id="main" class="wrapper style2">
-					<div class="title">Preview</div>
+					<div class="title"></div>
+					<p style="text-align: center;">
+    						<a href="/Radzom_CV.pdf" class="button style2 large;">Download CV</a>
+						<a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20author%3A%22Radzom%2C%20Brandon%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" class="button style2 large;">ADS Publications</a>
 					<div class="container">
-						<embed src="/Radzom_CV.pdf" width="800px" height="2100px" />
+						<embed src="/Radzom_CV.pdf" width="800px" height="2100px" margin: 0 auto />
 					</div>
 				</div>
 
