--- a/cv.html
+++ b/cv.html
@@ -23,9 +23,6 @@
 							<!--<p>Click<a href="/Radzom_CV.pdf" here>
   								<img src="/Radzom_CV.pdf" alt="here">
 							</a> to download</p>-->
-							<p style="text-align: center;">
-    								<a href="/Radzom_CV.pdf" class="button style2 large;">Download CV</a>
-							</p>
 							
 						</div>
 
@@ -46,10 +43,11 @@
 				<div id="main" class="wrapper style2">
 					<div class="title"></div>
 					<p style="text-align: center;">
-    						<a href="/Radzom_CV.pdf" class="button style2 large;">Download CV</a>
+    						<a href="/Radzom_CV.pdf" class="button style2 large;" margin-right: 20px;>Download CV</a>
+						
 						<a href="https://ui.adsabs.harvard.edu/search/fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq_database=(database%3Aastronomy%20OR%20database%3Aphysics)&q=%20author%3A%22Radzom%2C%20Brandon%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" class="button style2 large;">ADS Publications</a>
 					<div class="container">
-						<embed src="/Radzom_CV.pdf" width="800px" height="2100px" margin: 0 auto />
+						<embed src="/Radzom_CV.pdf" width="800px" height="2100px" margin: auto; />
 					</div>
 				</div>
 
