--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li class="current"><a href="research.html">Research</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="experience.html">Experience</a></li>
+								<li><a href="outreach.html">Outreach</a></li>
 								<li><a href="cv.html">CV</a></li>
 								
 							</ul>
@@ -219,7 +219,14 @@
 										New Frontiers 5 Announcement of Opportunity (released 2023) as well as the 2023-2032 Planetary 
 										Science Decadal Survey, addressing priority questions concerning solid surfaces and interiors,
 										solid body atmospheres, climate evolution, and dynamic habitability.</p>
-										
+										<div>
+									   <img src="images/cohort_pic_control_room.jpg" width="400" height="300" align="right" style="margin: 10px 20px 10px 20px; float: right"
+											alt="My PSSS cohort picuted just outside of JPL mission control." />
+									</div>
+										<div>
+									   <img src="images/brandon_thunder_subsystem_role.jpg" width="400" height="300" align="left" style="margin: 10px 20px 10px 20px; float: right"
+											alt="Picture of me holding my subsytem role plack in front of a whiteboard sketch of our mission concept, THUNDER, at JPL." />
+									</div>
 										<p>As a Science Objective
 									Lead, I led the development of one of the mission's three science objectives, which seeks to identify and
 										characterize the scale and connectivity of Titan's liquid hydrocarbon bodies and potential 
