--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="research.html">Research</a></li>
 								<li class="current"><a href="about.html">About</a></li>
-								<li><a href="experience.html">Experience</a></li>
+								<li><a href="outreach.html">Outreach</a></li>
 								<li><a href="cv.html">CV</a></li>
 							</ul>
 						</nav>
