--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<!--</li>-->
 								<li><a href="research.html">Research</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="experience.html">Experience</a></li>
+								<li><a href="outreach.html">Outreach</a></li>
 								<li><a href="cv.html">CV</a></li>
 							</ul>
 						</nav>
