--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title"></div>
+					<!-- <div class="title"></div> -->
 					<p style="text-align: center;">
     						<a href="cv.html" class="button style3 large;">CV</a>
 					</p>
